--- a/linera-explorer/html/input_type.html
+++ b/linera-explorer/html/input_type.html
@@ -1,25 +1,27 @@
-<div v-if="!t">TYPE NOT FOUND</div>
-<input v-else-if="t.kind=='SCALAR' && (t.name=='Int' || t.name=='Float')" class="form-control" type="number" v-model.number="t._input">
-<select v-else-if="t.kind=='SCALAR' && t.name=='Boolean'" class="form-select" v-model="t._input">
+<div v-if="!elt">TYPE NOT FOUND</div>
+<input v-else-if="elt.kind=='SCALAR' && (elt.name=='Int' || elt.name=='Float')" class="form-control" type="number" v-model.number="elt._input">
+<select v-else-if="elt.kind=='SCALAR' && elt.name=='Boolean'" class="form-select" v-model="elt._input">
   <option :value="true" selected>true</option>
   <option :value="false">false</option>
 </select>
-<input v-else-if="t.kind=='SCALAR'" class="form-control" type="text" v-model="t._input">
-<v-input-type v-else-if="t.kind=='NON_NULL'" :t="t.ofType" :offset="offset"></v-input-type>
-<div v-else-if="t.kind=='INPUT_OBJECT'" class="row">
-  <div v-for="f in t.inputFields" :class="offset ? 'col-11 offset-1' : 'col-12'">
+<input v-else-if="elt.kind=='SCALAR'" class="form-control" type="text" v-model="elt._input">
+<v-input-type v-else-if="elt.kind=='NON_NULL'" :elt="elt.ofType" :offset="offset"></v-input-type>
+<div v-else-if="elt.kind=='INPUT_OBJECT'" class="row">
+  <div v-for="f in elt.inputFields" :class="offset ? 'col-11 offset-1' : 'col-12'">
     <div class="form-label" :title="f.description">{{ f.name }}{{ f.type.kind=='NON_NULL' ? ' (*)' : '' }}</div>
-    <v-input-type :t="f.type" :offset="true"></v-input-type>
+    <v-input-type :elt="f.type" :offset="true"></v-input-type>
   </div>
 </div>
-<div v-else-if="t.kind=='LIST'">
-  <div v-for="(x, i) in t._input" class="row">
-    <span class="col-1 d-grid gap-2" v-if="x!==undefined">
+<div v-else-if="elt.kind=='LIST'">
+  <div v-for="(e, i) in elt._input" class="row">
+    <span class="col-1 d-grid gap-2" v-if="e!==undefined">
       <button class="btn btn-outline-secondary" @click="remove_input(i)">
         <i class="bi bi-dash-circle-fill"></i>
       </button>
     </span>
-    <v-input-type :t="x" class="col-11" v-if="x!==undefined" :offset="false"></v-input-type>
+    <span class="col-11" v-if="e!==undefined">
+      <v-input-type :elt="e" :offset="false"></v-input-type>
+    </span>
   </div>
   <div class="row">
     <span class="col-1 d-grid gap-2">
@@ -29,9 +31,9 @@
     </span>
   </div>
 </div>
-<select v-else-if="t.kind=='ENUM'" class="form-select" v-model="t._input">
-  <option v-for="e in t.enumValues" :value="e.name" selected>{{ e.name }}</option>
+<select v-else-if="elt.kind=='ENUM'" class="form-select" v-model="elt._input">
+  <option v-for="e in elt.enumValues" :value="e.name" selected>{{ e.name }}</option>
 </select>
 <div v-else>
-  <v-json :data="t"></v-json>
+  <v-json :data="elt"></v-json>
 </div>
