--- a/linera-explorer/html/operation.html
+++ b/linera-explorer/html/operation.html
@@ -1,51 +1,50 @@
-<div v-if="op?.System">
-  <div v-if="op.System.Transfer">
-    <div class="card">
-      <div class="card-header">
-        <div class="card-title">
-          <span v-if="index!==undefined">{{ index+1 }}. </span>
-          <span>Transfer</span>
+<div class="card">
+  <div class="card-body">
+    <h5 class="card-title">
+      <span>Operation</span>
+      <button class="btn btn-link btn-sm" data-bs-toggle="modal" :data-bs-target="'#'+op.hash+'-modal'" @click="json_load(op.hash+'-json', op)">
+        <i class="bi bi-braces"></i>
+      </button>
+      <div :id="op.hash+'-modal'" class="modal fade">
+        <div class="modal-dialog modal-xl">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Operation</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+              <div :id="op.hash+'-json'" style="overflow-x: auto"></div>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="card-body d-flex justify-content-around">
-        <span>{{ op.System.Transfer.amount }}</span>
-        <i class="bi bi-arrow-right"></i>
-        <a :title="op.System.Transfer.recipient.Account.chain_id" @click="route('blocks', [['chain', op.System.Transfer.recipient.Account.chain_id]])" class="btn btn-link">
-          {{ sh(op.System.Transfer.recipient.Account.chain_id) }}
-        </a>
-      </div>
-    </div>
-  </div>
-  <div v-else>
-    <div class="card">
-      <div class="card-header">
-        <span v-if="index!==undefined">{{ index+1 }}. </span>
-        <span>Operation</span>
-      </div>
-      <div class="card-body">
-        <v-json :data="op" :id="id+'-operation'"></v-json>
-      </div>
-    </div>
-  </div>
-</div>
+    </h5>
+    <ul class="list-group">
+      <li class="list-group-item d-flex justify-content-between">
+        <span><strong>Hash</strong></span>
+        {{ op.hash }}
+      </li>
+      <li class="list-group-item d-flex justify-content-between">
+        <span><strong>Index</strong></span>
+        <span>{{ op.operationIndex }}</span>
+      </li>
 
-<div v-else-if="op?.User">
-  <div class="card">
-    <div class="card-header">
-      <span v-if="index!==undefined">{{ index+1 }}. </span>
-      <span>Application</span>
-    </div>
-    <div class="card-body">
-      <pre><code>{{ op.User.bytes }}</code></pre>
-    </div>
-  </div>
-</div>
-
-<div v-else>
-  <div class="card">
-    <div class="card-header">
-      <span v-if="index!==undefined">{{ index+1 }}. </span>
-      <span>Undefined operation</span>
-    </div>
+      <li class="list-group-item d-flex justify-content-between">
+        <span><strong>Block</strong></span>
+        <a @click="route('block', [['block', op.operation.block]])" class="btn btn-link">{{ op.operation.block }} ({{ op.operation.index }})</a>
+      </li>
+      <li class="list-group-item d-flex justify-content-between">
+        <span><strong>Height</strong></span>
+        <span>{{ op.height }}</span>
+      </li>
+      <li class="list-group-item d-flex justify-content-between">
+        <span><strong>Previous Operation</strong></span>
+        <a v-if="op.previousOperation!==undefined" @click="route('operation', [['operation', op.previousOperation]])" class="btn btn-link">{{ op.previousOperation }}</a>
+        <span v-else>--</span>
+      </li>
+      <li class="list-group-item p-0">
+        <v-op :op="op.operation.content" :id="op.hash" :index="op.operatonIndex" :route="route"></v-op>
+      </li>
+    </ul>
   </div>
 </div>
