Clean up unused code and formatting

--- a/examples/llm/web-frontend/public/index.html
+++ b/examples/llm/web-frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="A fungible payment app built with Linera and React"
+      content="An app running LLMs on Linera."
     />
     <title>Linera Bot</title>
   </head>
