--- a/examples/llm/web-frontend/public/index.html
+++ b/examples/llm/web-frontend/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="An app running LLMs on Linera."
     />
-    <title>Linera Bot</title>
+    <title>LineraGPT</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
