--- a/examples/llm/web-frontend/public/index.html
+++ b/examples/llm/web-frontend/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="An app running LLMs on Linera."
+      content="A story-telling app on Linera."
     />
-    <title>LineraGPT</title>
+    <title>Linera Stories</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
